@@ -13,7 +13,8 @@ Require-Bundle: org.eclipse.ui;bundle-version="3.8.2",
  org.netxms.ui.eclipse.objectbrowser;bundle-version="2.1.0",
  org.eclipse.ui.forms;bundle-version="3.5.200",
  org.netxms.ui.eclipse.nxsl;bundle-version="2.0.7",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.1.3"
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.1.3",
+ org.netxms.ui.eclipse.objectmanager;bundle-version="2.1.3"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.7
 Bundle-ActivationPolicy: lazy
 Export-Package: org.netxms.ui.eclipse.agentmanager.dialogs,
