@@ -19,4 +19,5 @@ Require-Bundle: org.eclipse.ui;bundle-version="3.8.2",
 Bundle-RequiredExecutionEnvironment: JavaSE-1.7
 Bundle-ActivationPolicy: lazy
 Export-Package: org.netxms.ui.eclipse.objectmanager.actions,
+ org.netxms.ui.eclipse.objectmanager.dialogs,
  org.netxms.ui.eclipse.objectmanager.propertypages
