@@ -2,7 +2,7 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: Agent Management Plug-In for NXMC
 Bundle-SymbolicName: org.netxms.ui.eclipse.agentmanager;singleton:=true
-Bundle-Version: 2.1.0
+Bundle-Version: 2.1.1
 Bundle-Activator: org.netxms.ui.eclipse.agentmanager.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.rap.ui;bundle-version="2.3.1",
@@ -12,7 +12,8 @@ Require-Bundle: org.eclipse.rap.ui;bundle-version="2.3.1",
  org.netxms.webui.core;bundle-version="2.1.0",
  org.netxms.ui.eclipse.objectbrowser;bundle-version="2.1.0",
  org.netxms.ui.eclipse.nxsl;bundle-version="2.0.7",
- org.eclipse.rap.filedialog;bundle-version="3.1.0"
+ org.eclipse.rap.filedialog;bundle-version="3.1.0",
+ org.netxms.ui.eclipse.objectmanager;bundle-version="2.1.3"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
 Export-Package: org.netxms.ui.eclipse.agentmanager.dialogs,
