@@ -18,4 +18,5 @@ Require-Bundle: org.eclipse.rap.ui;bundle-version="2.3.0",
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
 Export-Package: org.netxms.ui.eclipse.objectmanager.actions,
+ org.netxms.ui.eclipse.objectmanager.dialogs,
  org.netxms.ui.eclipse.objectmanager.propertypages
